rpr5x/src/pp5v3/tests/link1.out
Loaded: /if14/ww6r/WorkingDisk/TA/compiler/exceptions/exceptions.s
spim: (parser) syntax error on line 2 of file grade_results/tests/link1.asm
	  *** Error.
	  ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main
